2009-07-02  Florent Lamiraux  <florent@laas.fr>

	Do not try to include files that are not installed anymore.
	* include/dynamicsJRLJapan/robotDynamicsImpl.h: 
	MultiBody.h and Body.h are not installed anymore.

2009-07-02  Florent Lamiraux  <florent@laas.fr>

	Implement New classes Joint and DynamicBody.
	* include/dynamicsJRLJapan/DynamicBody.h: New.
	* include/dynamicsJRLJapan/Joint.h: New.
	* src/CMakeLists.txt: .
	* src/private/DynamicBodyPrivate.h: .
	* src/private/JointPrivate.cpp: .
	* src/private/JointPrivate.h: .
	* src/public/DynamicBody.cpp: New.
	* src/public/Joint.cpp: New.
	* src/public/dynamicsJRLJapanFactory.cpp: .

	These classes are now wrapper around old implementation.

2009-07-01  Florent Lamiraux  <florent@laas.fr>

	Add information in INSTALL file.
	* INSTALL: indicate how to choose the mode of building:
	debug, release, ...

2009-07-01  Florent Lamiraux  <florent@laas.fr>

	Test programs correctly compile and all symbols are defined.
	* CMakeLists.txt,
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h,
	* src/DynamicMultiBody.cpp,
	* src/DynamicMultiBodyPrivate.h,
	* src/HumanoidDynamicMultiBody.cpp,
	* src/MultiBody.h,
	* unitTesting/TestCopyJointTreeThroughAbstractInterface.cpp: 
	Define undefined functions.

2009-07-02  Florent Lamiraux  <florent@laas.fr>

	Change name of class in private implementation.
	* src/CMakeLists.txt: .
	* src/private/Body.cpp: .
	* src/private/Body.h: .
	* src/private/DynMultiBodyPrivate.cpp: .
	* src/private/DynMultiBodyPrivate.h: .
	* src/private/DynamicBodyPrivate.cpp: .
	* src/private/DynamicBodyPrivate.h: .
	* src/private/DynamicMultiBodyActuated.cpp: .
	* src/private/DynamicMultiBodyAngularMomentum.cpp: .
	* src/private/DynamicMultiBodyArticularJacobian.cpp: .
	* src/private/DynamicMultiBodyCenterOfMass.cpp: .
	* src/private/DynamicMultiBodyInertiaMatrix.cpp: .
	* src/private/DynamicMultiBodyJointRank.cpp: .
	* src/private/DynamicMultiBodyNewtonEuler.cpp: .