@@ -18,7 +18,7 @@
 #include <MatrixAbstractLayer/MatrixAbstractLayer.h>
 
 #include "robotDynamics/jrlFoot.h"
-#include "dynamics-config.h"
+#include "dynamicsJRLJapan/dynamics-config.h"
 
 namespace dynamicsJRLJapan
 {
